fixed notes panel on mobile

--- a/theme/moe/style/moe.css
+++ b/theme/moe/style/moe.css
@@ -5155,3 +5155,56 @@ div#intro.generalbox{
 #page-course-view-onetopic.dir-rtl ul{
 	margin-right: 0px;
 }
+
+@media ( max-width : 1308px) {
+	#page-mod-moewiki-view ul.annotator-widget{
+		right: 0px;
+	}
+}
+
+@media ( max-width : 414px) {
+	
+	.path-mod.path-mod-moewiki  .annotator-outer{
+		right: 0px;
+		width: 278px;
+	}
+	
+	.path-mod.path-mod-moewiki .annotator-cancel{
+		width: 74px;
+		right: 194px;
+		top: 30px;
+	}
+	
+	.path-mod.path-mod-moewiki .annotator-resolved{
+	   width: 74px;
+   	   right: 93px;
+	}
+	
+	.path-mod.path-mod-moewiki .annotator-reply{
+		 width: 74px;
+   		 bottom: 30px;
+    	left: 8px;
+	}
+	
+	 
+	 .path-mod.path-mod-moewiki img.ig-responsive{
+		 margin-left: 5px;
+	 }
+	
+ 	.path-mod.path-mod-moewiki .annotator-item_part.image.span4{
+		width: 31%;
+		margin-left: 4px;
+ 	}
+
+}
+
+@media ( max-width : 768px) {
+	
+	.path-mod.path-mod-moewiki  .annotator-outer{
+		right: 0px;
+		width: 265px;
+	}
+
+	
+
+}
